確認テンプレ

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+/* bodyのCSS作成 */
+body{
+  background-color: #ffee0080;
+  display: flex;
+  justify-content: center;
+}
+
 #attribute{
     display: flex;
-    flex-direction: row;
+    text-align: center;
 }
-#Player,#ai{
+
+#Player_src,#ai_src{
     width: 60%;
     height: 150px;
     padding: 0em 1em;
@@ -11,9 +19,68 @@
     color: #40ff00;
     background: #FFF;
     border: solid 6px #0175fabd;
-    border-radius: 20px;
-    
+    border-radius: 20px;    
 }
-p{
-    text-align: center;
+
+.frame{
+    margin-left: 150px;
+    color: #0003a5;
+    background: rgba(255, 255, 255, 0);
+    font-size: 200%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#play_html{
+    width: 100px;
+}
+
+
+
+/* ボタンCSS作成 */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+  margin-left: 12%;
+}
+
+.btn--orange,
+a.btn--orange {
+  color: #fff;
+  background-color: #eb6100;
+}
+
+.btn--orange:hover,
+a.btn--orange:hover {
+  color: #fff;
+  background: #f56500;
+}
+
+a.btn--radius {
+  border-radius: 100vh;
 }
